tests/fixtures/positive/supply-chain/dependencies-in-root-project/settings.gradle.kts
rootProject.name = "dependencies-in-root-project-positive"

include(":app")
