tests/fixtures/negative/supply-chain/dependencies-in-root-project/settings.gradle.kts
rootProject.name = "dependencies-in-root-project-negative"

include(":app")
